-Created a table for displaying roll results. Looks better now! -The app now saves a text file, but the file is not visible on the device for some reason. If I can't figure it out I may drop saving files altogether.

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -25,4 +25,13 @@
         </activity>
     </application>
 
+    <!--This line is required to be able to write files to external storage-->
+    <uses-permission
+    android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+    android:maxSdkVersion="18" />
+
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+
 </manifest>
