-Added colour to text for hit rate. Turns red when 0, and green when greater than drop rate.
-Added ad banners and set up everything necessary to display ads.

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.dropratecalculator">
 
     <application
@@ -30,6 +31,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!--Ad stuff-->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-8058703801168579~8076408098"/>
     </application>
 
     <!--This line is required to be able to write files to external storage-->
